Update javafx to v26-ea+3